# yomitandicts-cpp

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Package.swift  README.md
benchmark/: import.cpp  lookup.cpp
cli/: main.cpp  test_processors.cpp
include/: module.modulemap  yomitandicts.h
include/hoshidicts/: deinflector.hpp
include/yomitandicts/: deinflector.hpp  importer.hpp  lookup.hpp  query.hpp
scripts/: generate_data.py
src/: deinflector.cpp  importer.cpp  lookup.cpp  query.cpp  utf8.hpp
src/deconjugator/: deconjugation_rules.hpp  deconjugator.cpp
src/deinflector/: deinflector.cpp  deinflector.hpp
src/hash/: hash.cpp  hash.hpp
src/import/: importer.cpp  importer.hpp
src/import/json/: json_parser.cpp
src/json/: json_parser.cpp  json_parser.hpp  yomitan_parser.cpp  yomitan_parser.hpp
src/lookup/: lookup.cpp  lookup.hpp
src/parser/: parser.cpp  parser.hpp
src/preprocessor/: text_processor.cpp  text_processor.hpp
src/query/: query.cpp  query.hpp
src/text_processor/: text_processor.cpp  unicode_data.hpp
tests/: import.cpp  lookup.cpp
